<resources>
    <string name="app_name">Food App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_menu">Mau cari apa?</string>
    <string name="loading_text">Memuat data&#8230;</string>
    <string name="discount">Diskon 10%!</string>
    <string name="desc_banner">Dapatkan diskonmu disini</string>
    <string name="currency">Rp.</string>
    <string name="price">0</string>
    <string name="add_cart_minus">-</string>
    <string name="add_cart_plus">+</string>
    <string name="add_cart">Tambah ke keranjang - Rp.0</string>
    <string name="title_location">Lokasi</string>
    <string name="show_price_add_cart_button">Tambah ke keranjang - Rp.%1$s</string>
    <string name="error_data">Data error, tidak ditemukan</string>
    <string name="empty_cart">Yah keranjang kamu kosong :(</string>
    <string name="delivery_method">Metode Pengiriman</string>
    <string name="cash">Tunai</string>
    <string name="ewallet">Dompet Digital</string>
    <string name="checkout_success">Checkout sukses maseh!</string>
    <string name="back_dialog">Kembali</string>
    <string name="total_price">Total Harga:</string>
    <string name="lets_checkout">👉 Yuk Checkout 👈</string>
    <string name="title_input_name_user">Nama Kamu</string>
    <string name="name_user">Yunian Edwi Risnawaputra</string>
    <string name="title_password_input_profile">Password</string>
    <string name="password">admin123</string>
    <string name="title_email_input_profile">Email</string>
    <string name="email">yunianedwi01@gmail.com</string>
    <string name="title_telephone_number_input_profile">Nomor Telepon</string>
    <string name="item_cart_hint">Pastikan tidak ada catatan pribadi ya!</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password_hint">*********</string>
    <string name="name_hint">Masukkan nama anda</string>
    <string name="mutiple">X</string>
    <string name="title_note">Catatan:</string>
    <string name="notes_checkout">Tidak ada catatan</string>
    <string name="title_catalog_menu">#Untukmu!</string>
    <string name="no_data">Tidak ada data</string>
    <string name="home_greetings">Mau makan apa?</string>
    <string name="title_app_bar_cart">Cart</string>
    <string name="title_app_bar_checkout">Checkout</string>
    <string name="title_app_bar_profile">Profile User</string>
    <string name="add_cart_success">Add cart success</string>
    <string name="add_cart_failed">Add cart failed</string>
    <string name="add_cart_loading">Add cart loading</string>
    <string name="product_not_found">Product not found</string>
    <string name="phone_input">08xxxxxxxxxx</string>
    <string name="register_failed">Register gagal</string>
    <string name="register_success">Register berhasil</string>
    <string name="login_success">Login sukses</string>
    <string name="login_failed">Login gagal</string>
    <string name="password_not_same">Password tidak sama</string>
    <string name="password_not_empty">Password harus diisi</string>
    <string name="password_under_character">Password kurang dari 8 karakter</string>
    <string name="email_is_empty">Email belum diisi</string>
    <string name="email_invalid">Email invalid</string>
    <string name="name_is_empty">Nama belum diisi</string>
    <string name="validate_logout">Yakin mau logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change_name_success">Ganti nama sukses</string>
    <string name="change_name_failed">Ganti nama gagal</string>
    <string name="change_password_success">Ganti password sukses</string>
    <string name="change_password_failed">Ganti password gagal</string>
    <string name="login">Masuk</string>
    <string name="register_now">Daftar sekarang</string>
    <string name="not_have_account">Belum memiliki akun?</string>
    <string name="header_login">Welcome back!</string>
    <string name="header_register">Daftar dulu yuk!</string>
    <string name="btn_register_now">Daftar Sekarang!</string>
    <string name="have_account">Sudah memiliki akun sebelumnya?</string>
    <string name="lets_login">Yuk login!</string>
    <string name="exit">Keluar</string>
    <string name="check_email_change_password">Silahkan cek email</string>
    <string name="greetings">Selamat datang! 👋🏼</string>
    <string name="hello_user">Halo, %1$s 👋🏼</string>
    <string name="change_password">Ganti password</string>
    <string name="data_not_found">Tidak ada data</string>
    <string name="add_menu_success">Menu berhasil ditambahkan!</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="self_take">Ambil Sendiri</string>
    <string name="send_by_courier">Kirimin Dong</string>
    <string name="payment_summary">Ringkasan Pembayaran</string>
    <string name="checkout">Checkout</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
</resources>