<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="1dp"
    android:layout_margin="4dp"
    app:cardCornerRadius="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_checkout"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:elevation="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_loading_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_menu_checkout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/loading_text"
            android:layout_marginHorizontal="16dp"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_checkout"/>

        <TextView
            android:id="@+id/tv_currency_cart_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/iv_checkout"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_menu_checkout" />

        <TextView
            android:id="@+id/tv_price_cart_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            app:layout_constraintBottom_toBottomOf="@+id/tv_currency_cart_menu"
            app:layout_constraintStart_toEndOf="@+id/tv_currency_cart_menu"
            app:layout_constraintTop_toTopOf="@+id/tv_currency_cart_menu" />

        <TextView
            android:id="@+id/tv_mutiple_checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mutiple"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_price_cart_menu"
            app:layout_constraintStart_toEndOf="@+id/tv_price_cart_menu"
            app:layout_constraintTop_toTopOf="@+id/tv_price_cart_menu" />

        <TextView
            android:id="@+id/tv_qyt_checkout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_mutiple_checkout"
            app:layout_constraintStart_toEndOf="@+id/tv_mutiple_checkout"
            app:layout_constraintTop_toTopOf="@+id/tv_mutiple_checkout" />

        <TextView
            android:id="@+id/tv_title_notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/title_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_checkout"
            app:layout_constraintTop_toBottomOf="@+id/tv_currency_cart_menu" />

        <TextView
            android:id="@+id/tv_notes_checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_checkout"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_notes"
            android:text="@string/notes_checkout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>