<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_cart_menu"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:elevation="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_loading_picture"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_cart_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/loading_text"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_cart_menu"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_currency_cart_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/iv_cart_menu"
            app:layout_constraintTop_toBottomOf="@+id/tv_cart_menu" />

        <TextView
            android:id="@+id/tv_price_cart_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            app:layout_constraintBottom_toBottomOf="@+id/tv_currency_cart_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_currency_cart_menu"
            app:layout_constraintTop_toTopOf="@+id/tv_currency_cart_menu" />

        <TextView
            android:id="@+id/add_cart_menu_minus"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_add_counter"
            android:clickable="true"
            android:text="@string/add_cart_minus"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/iv_cart_menu"
            app:layout_constraintTop_toBottomOf="@+id/tv_price_cart_menu"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/counter_add_cart_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/add_cart_menu_minus"
            app:layout_constraintStart_toEndOf="@+id/add_cart_menu_minus"
            app:layout_constraintTop_toTopOf="@+id/add_cart_menu_minus"
            tools:text="1" />

        <TextView
            android:id="@+id/add_cart_menu_plus"
            android:layout_width="25"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_add_counter"
            android:clickable="true"
            android:text="@string/add_cart_plus"
            android:textAlignment="center"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/counter_add_cart_menu"
            app:layout_constraintStart_toEndOf="@+id/counter_add_cart_menu"
            app:layout_constraintTop_toTopOf="@+id/counter_add_cart_menu"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/iv_delete_cart_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_price_cart_menu" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_cart_menu">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_selector_input"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="Pastikan tidak ada catatan pribadi ya!"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:padding="12dp"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>